[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "infomeasure"
authors = [
    { name = "Carlson Büth", email = "code@cbueth.de" },
    { name = "Kishor Achary" },
    { name = "Massimilliano Zanin" },
]
maintainers = [{ name = "Carlson Büth", email = "code@cbueth.de" }]
license = "AGPL-3.0-or-later"
readme = "README.md"
description = "Comprehensive collection of information measures."
keywords = ["Entropy", "Mutual Information", "Information Theory", "Information Measures"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.22",
    "scipy>=1.0.0",
    "sparse>0.10.0",
    "numba>=0.55.0", # dependency of sparse - manually added to avoid installation issue in uv
]

[project.urls]
Documentation = "https://infomeasure.readthedocs.io/"
Repository = "https://github.com/cbueth/infomeasure"
Issues = "https://github.com/cbueth/infomeasure/issues"
Changelog = "https://infomeasure.readthedocs.io/en/latest/changelog/"

[project.optional-dependencies]
lint = ["ruff>=0.15.0,<1"]
test = ["pytest>=6.2.5,<10", "pytest-cov>=3,<8", "coverage>=6,<8"]
doc = [
    "sphinx>=5,<10",
    "numpydoc>=1.5,<2",
    "myst-nb>=1,<2",
    "sphinx-design>=0.3,<1",
    "sphinx-book-theme>=1,<2",
    "sphinxcontrib-bibtex>=2.3.0,<3",
    "sphinxcontrib-mermaid>=1,<3",
    "sphinx-automodapi>=0.15,<1",
    "matplotlib>=3.5,<4",
]
all = ["infomeasure[lint,test,doc]"]

[tool.setuptools.packages.find]
exclude = [
    "docs*",
]
namespaces = false

[tool.setuptools.dynamic]
readme = { file = ["README.md", "LICENSE"] }
version = { attr = "infomeasure._version.__version__" }

# --------------------------------------------------------------------------------------
# Linting
# --------------------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
ignore = ["E741"]
select = ["NPY201"]

# --------------------------------------------------------------------------------------
# Testing
# --------------------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -W error"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["infomeasure"]
relative_files = true
